# Web-technology

./: .gitignore  README.md  fastapi_main.py  kfdemo.py  pyproject.toml
day2/: README.md  fastapi_main.py  hello-vertex-ai.py
day3/: README.md  fastapi_main.py
day3/routers/: classification_router.py  clients_router.py  default_router.py
day4/requests/: Items.py
day4/routers/: clients_router.py  default_router.py  users_router.py
day4/services/: items_svc.py
